@@ -23,6 +23,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|ref
+operator|.
+name|WeakReference
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|HashMap
@@ -571,8 +583,18 @@ block|{
 name|ModuleRevisionId
 name|r
 init|=
+literal|null
+decl_stmt|;
+synchronized|synchronized
+init|(
+name|CACHE
+init|)
+block|{
+name|WeakReference
+name|ref
+init|=
 operator|(
-name|ModuleRevisionId
+name|WeakReference
 operator|)
 name|CACHE
 operator|.
@@ -581,6 +603,24 @@ argument_list|(
 name|moduleRevisionId
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|ref
+operator|!=
+literal|null
+condition|)
+block|{
+name|r
+operator|=
+operator|(
+name|ModuleRevisionId
+operator|)
+name|ref
+operator|.
+name|get
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|r
@@ -598,9 +638,14 @@ name|put
 argument_list|(
 name|r
 argument_list|,
+operator|new
+name|WeakReference
+argument_list|(
 name|r
 argument_list|)
+argument_list|)
 expr_stmt|;
+block|}
 block|}
 return|return
 name|r
